# attack-surface-ml

./: .dockerignore  .dvcignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  dvc.yaml  mlflow.db  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  security.yml
dashboard/: app.py
docker/: Dockerfile.api  Dockerfile.mlflow
docs/: architecture.md  aws-blueprint.md  demo-script.md  deployment.md  runbook.md  threat-model.md
infra/postgres/: init.sql
metrics/: train.json
src/asm/: __init__.py  config.py
src/asm/data/: ingest.py  synthesize.py  validate.py
src/asm/discovery/: nmap.py  scan.py  schemas.py  subfinder.py
src/asm/features/: build.py
src/asm/misconfig/: nuclei.py  scan.py  schemas.py
src/asm/models/: adversarial.py  evaluate.py  train.py
src/asm/monitoring/: drift.py
src/asm/orchestrator/: jobs.py  nvd.py  pipeline.py  schemas.py
src/asm/registry/: promote.py  sign.py
src/asm/serving/: api.py  audit.py
tests/: conftest.py
tests/discovery/: test_nmap_parsing.py  test_scan_orchestration.py  test_subfinder_parsing.py
tests/integration/: test_api_health.py
tests/misconfig/: test_nuclei_parsing.py  test_scan_orchestration.py
tests/orchestrator/: test_jobs.py  test_nvd_cache.py  test_pipeline.py
tests/security/: test_adversarial.py  test_input_validation.py
tests/serving/: test_rate_limit.py
tests/unit/: test_config.py
