[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asm"
version = "0.1.0"
description = "ML-driven attack surface management with MLSecOps pipeline"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Syed Daniyal Hussain, Muhammad Asad Imran" }]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "slowapi>=0.1.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pandas>=2.2",
    "numpy>=1.26",
    "xgboost>=2.0",
    "scikit-learn>=1.4",
    "pandera>=0.18",
    "mlflow>=2.10",
    "dvc[s3]>=3.45",
    "evidently>=0.4",
    "structlog>=24.1",
    "httpx>=0.27",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.9",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "pre-commit>=3.6",
    "ipykernel>=6.29",
]
security = [
    "adversarial-robustness-toolbox>=1.17",
]
dashboard = [
    "streamlit>=1.31",
    "plotly>=5.19",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S", "C4", "SIM", "RUF"]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.per-file-ignores]
# Discovery/misconfig modules wrap external CLI tools (nmap, subfinder, nuclei).
# S603 (subprocess call) and S607 (partial executable path) are inherent to the design.
"src/asm/discovery/*.py" = ["S603", "S607"]
"src/asm/misconfig/*.py" = ["S603", "S607"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --cov=asm --cov-report=term-missing"
asyncio_mode = "auto"

[tool.bandit]
exclude_dirs = ["tests", "notebooks"]
skips = ["B101"]
